--- a/website/templates/index.pug
+++ b/website/templates/index.pug
@@ -51,7 +51,7 @@ html(lang="fr")
 						div.col-md-4
 							div.p-4.no-gutters.border.rounded.overflow-hidden.flex-md-row.shadow-sm.position-relative
 								h3.mb-0 70%
-								p.card-text.mb-auto des tâches validées
+								p.card-text.mb-auto des tâches terminées
 						div.col-md-4
 							div.p-4.no-gutters.border.rounded.overflow-hidden.flex-md-row.shadow-sm.position-relative
 								h3.mb-0 42
