Add Nominatim geocoder

--- a/website/templates/index.pug
+++ b/website/templates/index.pug
@@ -47,6 +47,7 @@ html(lang="fr")
 					h2.blog-post-title Participer
 					div.row
 						div.col-md-8
+							include geocoder.pug
 							include map.pug
 						div.col-md-4
 							p Descriptif synthétique de la mission et ce qu'il faut faire en lien avec la carte
