--- a/website/templates/index.css
+++ b/website/templates/index.css
@@ -8,6 +8,8 @@
 .blog-header-logo {
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
   font-size: 2.25rem;
+  max-width: 300px;
+  max-height: 120px;
 }
 
 .blog-header-logo:hover {
