--- a/website/templates/index.pug
+++ b/website/templates/index.pug
@@ -33,8 +33,7 @@ html(lang="fr")
 						div.col-lg-8
 							include geocoder.pug
 							include map.pug
-						div.col-lg-4
-							p Descriptif synthétique de la mission et ce qu'il faut faire en lien avec la carte
+						div.col-lg-4!= howto
 
 				//- Statistics
 				include stats.pug
