Buttons for marking as false/done osmose issue

--- a/website/templates/index.css
+++ b/website/templates/index.css
@@ -152,6 +152,22 @@ h1, h2, h3, h4, h5, h6 {
 	position: relative;
 	background-color: #fff;
 	border-radius: 3px;
+	width: 29px;
+	height: 29px;
+	box-shadow: 0 0 0 2px rgba(0,0,0,.1);
+	text-align: center;
+}
+
+.map-ctrl-custom:hover {
+	background-color: #F2F2F2;
+}
+
+.map-ctrl-custom a {
+	display: block;
+	line-height: 26px;
+	width: 21px;
+	height: 25px;
+	text-decoration: none !important;
 }
 
 a.pdm-link {
